# opentrust

./: .env.example  .env.marketplace.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCOVERY_DESIGN_PLAN.md  Dockerfile  HACKATHON_SUBMISSION.md  LICENSE  Makefile  README.md  SECURITY_AUDIT.md  docker-compose.prod.yml  docker-compose.yml  pytest.ini  renovate.json  smithery.yaml
.claude/: settings.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  passport-order-autoresponse.yml  post-voltagent-comment.yml  publish.yml  submit-hermes-skill.yml
api/: README.md  openapi.yaml  requirements.txt
api/migrations/: 004_add_discovery_tables.sql
api/src/: config.py  crypto.py  database.py  main.py  well_known.py
api/tests/: conftest.py  test_api.py  test_coinbase.py  test_crypto.py  test_custody.py  test_escrow.py  test_escrow_provider.py  test_fees.py  test_followups.py  test_gateway_policy.py  test_gateway_routes.py  test_install_and_signup.py  test_jobs.py  test_marketplace.py  test_marketplace_durable.py  test_marketplace_persistence.py  test_metered_api.py  test_metered_billing.py  test_onchain.py  test_passport_auth.py  test_passport_list_resilience.py  test_passports.py  test_production_hardening.py  test_production_registry_contract.py  test_registry_admin.py  test_reputation.py  (+2 more)
badge-generator/: README.md  generate_badge.py
cli/: README.md  pyproject.toml
cli/src/opentrust_cli/: api_client.py  formatters.py  main.py  schema_validator.py
cli/src/opentrust_cli/commands/: badge.py  claim.py  dev.py  inspect.py  payment.py  policy.py  search.py  status.py  validate.py  verify.py
cli/tests/: test_cli.py  test_policy_spend_file.py  test_schema_validator.py  test_verify.py
docs/: README.md  SYSTEM-OVERVIEW.md  agent-guide.md  agent-key-management.md  api-spec.md  api.md  architecture.md  cli.md  governance.md  hbf-recipes.md  hermes-nemoclaw-recipe.md  implementation-plan.md  index.html  llms.txt  mcp-security-report.html  no-domain-public-preview.md  passport-service.html  passport-spec.md  payment-contracts.md  production-readiness.md  public-launch-report.md  registry-privacy.md  registry-seed-100.txt  security.md  seller-pricing-guide.md  sitemap.xml  sub-agents.md  trust-ladder.md  voltagent.html
manifest-validator/: README.md  test_validator.py  validator.py
passport-generator/: README.md  generator.py
passport-schema/: README.md  agent-identity.schema.json  commercial-status.schema.json  error-response.schema.json  escrow.schema.json  passport.schema.json  permissions.schema.json  registry-trust.schema.json  security.schema.json  signed-revocation-list.schema.json  spend-policy.schema.json  trust-ladder.json
payment-contracts/: README.md  models.py  pyproject.toml
payment-contracts/interfaces/: escrow_interface.py  payment_gateway.py  subscription_manager.py  verification_pricing.py
payment-contracts/payment_contracts/: __init__.py  models.py
payment-contracts/payment_contracts/interfaces/: __init__.py  escrow_interface.py  payment_gateway.py  subscription_manager.py  verification_pricing.py
payment-contracts/schemas/: checkout.schema.json  subscription.schema.json
payment-contracts/tests/: test_interfaces.py  test_models.py  test_quote_production_safety.py  test_quote_validation.py
payment-webhook-handler/: README.md  handler_interface.py
rfcs/: 0000-template.md  0001-passport-schema-v1.md  0002-agent-identity.md  0003-multi-registry.md  0004-spend-policy.md  README.md  RFC-002-granular-permissions.md
scripts/: backup-sqlite.sh  backup.sh  migrate.sh  post-voltagent-comment.sh  restore-sqlite.sh  restore.sh  seed-tools.sh  seed_real_mcp_servers.py  seed_registry_100.py  seed_tools.py  setup-private.sh  start-public-preview.sh
sdk/: README.md  pyproject.toml
sdk-ts/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
sdk/src/opentrust/: __init__.py  _client.py  _recommend.py  _types.py  _verify.py  mcp.py
sdk/tests/: test_client.py  test_mcp.py  test_recommend.py  test_sdk.py  test_verify_signature.py
web/: README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.js
(+160 files in other folders)
