[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentrust-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "rich>=15.0.0", "httpx>=0.27", "jsonschema>=4"]

[project.scripts]
opentrust = "opentrust_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
