[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentrust-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["typer>=0.25.1", "rich>=15.0.0", "httpx>=0.28.1", "jsonschema>=4.26.0"]

[project.scripts]
opentrust = "opentrust_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
