[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentrust-payment-contracts"
version = "0.1.0"
description = "Abstract payment contracts for OpenTrust payment providers"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7"]

[tool.setuptools]
packages = ["payment_contracts", "payment_contracts.interfaces"]
