[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentrust-sdk"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.28"]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
opentrust-mcp = "opentrust.mcp:main"

[tool.setuptools.packages.find]
where = ["src"]
