[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentrust-sdk"
version = "1.0.1"
description = "Python SDK and MCP bridge for the OpenTrust tool trust registry"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Novel Hut Studios", email = "founder@novelhut.net" }]
keywords = ["opentrust", "ai-agents", "mcp", "trust-registry", "tool-passports"]
dependencies = ["httpx>=0.28", "cryptography>=42"]

[project.urls]
Homepage = "https://github.com/Costder/opentrust"
Repository = "https://github.com/Costder/opentrust"
Issues = "https://github.com/Costder/opentrust/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
opentrust-mcp = "opentrust.mcp:main"

[tool.setuptools.packages.find]
where = ["src"]
